force-app/main/default/objects/Operation_Channel__e/Operation_Channel__e.object-meta.xml
<CustomObject>
    <label>Operation Channel</label>
    <pluralLabel>Operation Channel</pluralLabel>
</CustomObject>