force-app/main/default/objects/Operation_Channel__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Payload data</description>
    <label>Message</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>