force-app/main/default/objects/Operation_Channel__e/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <description>Operation type e.g, Study Plan Cloning</description>
    <label>Operation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>