force-app/main/default/objects/Operation_Channel__e/fields/Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Resource_ID__c</fullName>
    <description>Resource ID e.g, ID of cloned study plan</description>
    <label>Resource ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>