force-app/main/default/objects/Operation_Channel__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Any status e.g, In progress, Completed, Failed</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>